--- a/src/components/NavBar/SearchBox/Search.css
+++ b/src/components/NavBar/SearchBox/Search.css
@@ -1,27 +1,25 @@
-.search-component{
-    display: flex;  
+.search-component {
+    display: flex;
     justify-content: center;
     align-items: center;
 }
-.searchBox{
-    /* width: 640px; */
-    /* height: 38px; */
-    /* margin-top: 8px; */
+
+.searchBox {
     width: 45vw;
     height: 5vh;
-    /* margin-top: 1.55%; */
     font-size: medium;
     padding: 2%;
 }
 
 .searchIcon {
-	background: url('https://ik.imagekit.io/amazonzlone15/amazon-image/sprite_350x.png?updatedAt=1689420715250') no-repeat -9px -289px;
-	width: 23px;
-	height: 23px;
+    background: url('https://ik.imagekit.io/amazonzlone15/amazon-image/sprite_350x.png?updatedAt=1689420715250') no-repeat -9px -289px;
+    width: 23px;
+    height: 23px;
     margin: 10px;
     cursor: pointer;
 }
-.searchbox-div{
+
+.searchbox-div {
     background-color: #FEBE68;
     /* height: 44px; */
     height: 5vh;
@@ -33,11 +31,13 @@
     /* margin-top: 8px; */
     /* margin-top: 1.3%; */
 }
-.dropdown-div{
+
+.dropdown-div {
     /* margin-top: 1.3%; */
     margin-left: 5%;
 }
-.dropdown{
+
+.dropdown {
     /* height: 44px; */
     height: 5vh;
     width: 3.7vw;
@@ -47,29 +47,60 @@
     text-align-last: center;
 }
 
+.listy {
+    position: absolute !important;
+    width: 45vw;
+    margin-top: 40px;
+    background-color: white;
+    color: black;
+    border-radius: 5px;
+}
+
+.listy li {
+    color: #000000;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.listy li:hover {
+    background-color: #e6e5e5;
+}
+
 /* ===================================================================================*/
 @media (max-width: 600px) {
     .searchBox {
-      width: 100px;
-      height: 5vh;
-      font-size: medium;
-      padding: 2%;
-      font-size: 12px;
+        width: 100px;
+        height: 5vh;
+        font-size: medium;
+        padding: 2%;
+        font-size: 12px;
     }
-  
+
+    .listy {
+        position: absolute;
+        width: 300px;
+        margin-left: -200px;
+        margin-top: 10px;
+        background-color: white;
+        color: black;
+        border-radius: 5px;
+    }
+
     .dropdown {
-      width: 10vw;
-      height: 5vh;
-      font-size: 12px;
+        width: 10vw;
+        height: 5vh;
+        font-size: 12px;
     }
+
     .searchIcon {
         width: 20px;
         height: 23px;
         margin: 10px;
         cursor: pointer;
     }
-  }
-  @media (min-width: 768px) and (max-width: 1024px) {
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
 
     .searchBox {
         width: 50vw;
@@ -77,6 +108,15 @@
         font-size: medium;
         padding: 2%;
         font-size: 16px;
+    }
+
+    .listy {
+        position: absolute;
+        width: 50vw;
+        margin-top: 10px;
+        background-color: white;
+        color: black;
+        border-radius: 5px;
     }
 
     .dropdown {
