--- a/src/components/NavBar/SearchBox/Search.css
+++ b/src/components/NavBar/SearchBox/Search.css
@@ -9,6 +9,7 @@
     height: 5vh;
     font-size: medium;
     padding: 2%;
+    cursor:pointer;
 }
 
 .searchIcon {
@@ -74,6 +75,7 @@
         font-size: medium;
         padding: 2%;
         font-size: 12px;
+        cursor:pointer;
     }
 
     .listy {
@@ -108,6 +110,7 @@
         font-size: medium;
         padding: 2%;
         font-size: 16px;
+        cursor:pointer;
     }
 
     .listy {
