--- a/src/components/NavBar/SearchBox/Search.css
+++ b/src/components/NavBar/SearchBox/Search.css
@@ -100,6 +100,24 @@
         margin: 10px;
         cursor: pointer;
     }
+    .listy {
+        position: absolute !important;
+        width: 55vw; /* Adjust the width as needed for smaller screens */
+        margin-top: 40px;
+        background-color: white;
+        color: black;
+        border-radius: 5px;
+    }
+    
+    .listy li {
+        color: #000000;
+        font-size: 16px;
+        cursor: pointer;
+    }
+    
+    .listy li:hover {
+        background-color: #e6e5e5;
+    }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
