--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -123,6 +123,8 @@ cursor: pointer;
 .navbar_footer_text{
     font-size: 14px;
     cursor: pointer;
+	font-weight: bold;
+
 }
 .hamburger{
     display:none;
