--- a/src/components/NavBar/SearchBox/Search.css
+++ b/src/components/NavBar/SearchBox/Search.css
@@ -96,7 +96,7 @@
 
     .searchIcon {
         width: 20px;
-        height: 5vh;
+        height: 23px;
         margin: 10px;
         cursor: pointer;
     }
@@ -117,6 +117,9 @@
     
     .listy li:hover {
         background-color: #e6e5e5;
+    }
+        .searchbox-div {
+         height: 5vh;
     }
 }
 
@@ -147,8 +150,11 @@
 
     .searchIcon {
         width: 80px;
-        height: 5vh;
+        height: 25px;
         margin: 10px;
         cursor: pointer;
+    }
+        .searchbox-div {
+         height: 5vh;
     }
 }
