--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,6 @@
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     ::selection {
-        color: #ffa41b; /* Text color when selected */
+        color: #ffa41b;
       }
 }
