--- a/src/components/ImageSlider/ImageSlider.css
+++ b/src/components/ImageSlider/ImageSlider.css
@@ -9,7 +9,7 @@
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	transition: all 1s ease-in;
+	transition: all 2s ease-in-out;
   cursor: pointer;
 }
   .main {
@@ -28,7 +28,7 @@
 
   .main{
     flex-direction: column;
-    height: 85vh;
+    height: 75vh;
     width: 100%;
     margin: auto;
     position: relative;
@@ -36,13 +36,14 @@
   }
 
   .slide {
-    height: 40vh;
+    height: 50vh;
+    width: 100vw;
   }
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .main{
     flex-direction: column;
-    height: 70vh;
+    height: 60vh;
     width: 100%;
     margin: auto;
     position: relative;
@@ -50,7 +51,7 @@
   }
 
   .slide {
-    height: 45vh;
+    height: 60vh;
   }
 }
 
