--- a/src/components/HomePage/MainPage.css
+++ b/src/components/HomePage/MainPage.css
@@ -1,42 +1,42 @@
 .mainpage{
-    /* width: 100vw; */
-    height: 200vh;
-    background-size: 100vw;
-    background-repeat: no-repeat;
-    background-color: #d8f2f0;
+  max-width: 1519px;
+  height: 200vh;
+  background-size: 100vw;
+  background-repeat: no-repeat;
+  background-color: #d8f2f0;
+  margin: auto;
 }
 .mainPageDiv{
-          position: relative;
-          top: -475px;
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: center;
-        }
+        position: relative;
+        top: -475px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
 
-  /* For screens with a width of 768 pixels or less (mobile devices) */
-  @media (max-width: 768px) {
-    .mainpage {
-      height: 450vh; 
-    }
-        .mainPageDiv{
-          position: relative;
-          top: -350px;
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: center;
-        }
+/* For screens with a width of 768 pixels or less (mobile devices) */
+@media (max-width: 768px) {
+  .mainpage {
+    height: 450vh; 
   }
+      .mainPageDiv{
+        position: relative;
+        top: -450px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+}
 /* For screens with a width between 768px and 1024px (tablet devices) */
 @media (min-width: 768px) and (max-width: 1024px) {
-    .mainpage {
-      height: 200vh; 
-    }
-    .mainPageDiv{
-          position: relative;
-          top: -250px;
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: center;
-        }
+  .mainpage {
+    height: 200vh; 
   }
-  
+  .mainPageDiv{
+        position: relative;
+        top: -250px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+}
