--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -139,6 +139,17 @@
     /* font-weight: bold; */
 }
 
+.navbar_logoutButton{
+    margin-top:5px;
+    background-color: #FFD712 !important;
+    border-radius: 2px;
+    border: 1px solid;
+    border: 0px;
+    border: 0px;
+    border-radius: 7px;
+    font-size: 15px;
+    cursor:pointer;
+}
 .navbar_footer_text {
     font-size: 14px;
     font-weight: 600;
