--- a/src/components/NavBar/SearchBox/Search.css
+++ b/src/components/NavBar/SearchBox/Search.css
@@ -5,7 +5,7 @@
 }
 
 .searchBox {
-    width: 45vw;
+    width: 44vw;
     height: 5.5vh;
     font-size: medium;
     padding: 2%;
@@ -31,6 +31,9 @@
     align-items: center;
     /* margin-top: 8px; */
     /* margin-top: 1.3%; */
+}
+.searchbox-div:hover{
+    background-color: #ffa41b;
 }
 
 .dropdown-div {
